--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,181 +13,172 @@
         android:id="@+id/tvDisplay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="0"
+        android:textSize="24sp"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="0"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnClear"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="C"
-        app:layout_constraintEnd_toStartOf="@id/btnDivide"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnDivide"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="/"
-        app:layout_constraintEnd_toStartOf="@id/btnMultiply"
-        app:layout_constraintStart_toEndOf="@id/btnClear"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnMultiply"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="*"
-        app:layout_constraintBottom_toTopOf="@+id/btn5"
-        app:layout_constraintEnd_toStartOf="@id/btnSubtract"
-        app:layout_constraintStart_toEndOf="@id/btnDivide"
-        app:layout_constraintTop_toBottomOf="@+id/tvDisplay"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnSubtract"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/dash"
-        app:layout_constraintEnd_toStartOf="@id/btnAdd"
-        app:layout_constraintStart_toEndOf="@id/btnMultiply"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay" />
-
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="+"
-        app:layout_constraintEnd_toStartOf="@id/btnEquals"
-        app:layout_constraintStart_toEndOf="@id/btnSubtract"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        tools:ignore="HardcodedText" />
-
-    <Button
-        android:id="@+id/btnEquals"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="="
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btnAdd"
-        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintHorizontal_bias="0.5"/>
 
-    <Button
-        android:id="@+id/btnDecimal"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="."
-        app:layout_constraintEnd_toEndOf="@id/btn0"
-        app:layout_constraintStart_toStartOf="@id/btn0"
-        app:layout_constraintTop_toBottomOf="@id/btn0"
-        tools:ignore="HardcodedText" />
-
+    <!-- Buttons for numbers -->
     <Button
         android:id="@+id/btn1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="1"
-        app:layout_constraintEnd_toStartOf="@id/btn2"
-        app:layout_constraintStart_toStartOf="@id/btn0"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn2"/>
 
     <Button
         android:id="@+id/btn2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="2"
-        app:layout_constraintEnd_toStartOf="@id/btn3"
+        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
         app:layout_constraintStart_toEndOf="@id/btn1"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintEnd_toStartOf="@id/btn3"/>
 
     <Button
         android:id="@+id/btn3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="3"
-        app:layout_constraintEnd_toEndOf="@id/btn0"
+        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
         app:layout_constraintStart_toEndOf="@id/btn2"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btn4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="4"
-        app:layout_constraintEnd_toStartOf="@id/btn5"
-        app:layout_constraintStart_toStartOf="@id/btn1"
         app:layout_constraintTop_toBottomOf="@id/btn1"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn5"/>
 
     <Button
         android:id="@+id/btn5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2140dp"
         android:text="5"
-        app:layout_constraintEnd_toStartOf="@id/btn6"
+        app:layout_constraintTop_toBottomOf="@id/btn2"
         app:layout_constraintStart_toEndOf="@id/btn4"
-        app:layout_constraintTop_toBottomOf="@id/btn1"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintEnd_toStartOf="@id/btn6"/>
 
     <Button
         android:id="@+id/btn6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="444dp"
         android:text="6"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/btn0"
+        app:layout_constraintTop_toBottomOf="@id/btn3"
         app:layout_constraintStart_toEndOf="@id/btn5"
-        app:layout_constraintTop_toBottomOf="@+id/btnMultiply"
-        app:layout_constraintVertical_bias="0.5"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btn7"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="7"
-        app:layout_constraintEnd_toStartOf="@id/btn8"
-        app:layout_constraintStart_toStartOf="@id/btn4"
         app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn8"/>
 
     <Button
         android:id="@+id/btn8"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="8"
-        app:layout_constraintEnd_toStartOf="@id/btn9"
+        app:layout_constraintTop_toBottomOf="@id/btn5"
         app:layout_constraintStart_toEndOf="@id/btn7"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintEnd_toStartOf="@id/btn9"/>
 
     <Button
         android:id="@+id/btn9"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="9"
-        app:layout_constraintEnd_toEndOf="@id/btn0"
+        app:layout_constraintTop_toBottomOf="@id/btn6"
         app:layout_constraintStart_toEndOf="@id/btn8"
-        app:layout_constraintTop_toBottomOf="@id/btn4"
-        tools:ignore="HardcodedText,UnknownId" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Button for zero -->
+    <Button
+        android:id="@+id/btn0"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="0"
+        app:layout_constraintTop_toBottomOf="@id/btn8"
+        app:layout_constraintStart_toStartOf="@id/btn8"
+        app:layout_constraintEnd_toEndOf="@id/btn8"/>
+
+    <!-- Buttons for arithmetic operations -->
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="+"
+        app:layout_constraintTop_toBottomOf="@id/btn3"
+        app:layout_constraintStart_toEndOf="@id/btn3"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/btnSubtract"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="-"
+        app:layout_constraintTop_toBottomOf="@id/btn6"
+        app:layout_constraintStart_toEndOf="@id/btn6"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/btnMultiply"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="*"
+        app:layout_constraintTop_toBottomOf="@id/btn9"
+        app:layout_constraintStart_toEndOf="@id/btn9"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <Button
+        android:id="@+id/btnDivide"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="/"
+        app:layout_constraintTop_toBottomOf="@id/btn0"
+        app:layout_constraintStart_toEndOf="@id/btn0"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Button for decimal point -->
+    <Button
+        android:id="@+id/btnDecimal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="."
+        app:layout_constraintTop_toBottomOf="@id/btn0"
+        app:layout_constraintStart_toStartOf="@id/btn0"
+        app:layout_constraintEnd_toStartOf="@id/btnDivide"/>
+
+    <!-- Button for equals -->
+    <Button
+        android:id="@+id/btnEquals"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="="
+        app:layout_constraintTop_toBottomOf="@id/btnDivide"
+        app:layout_constraintStart_toEndOf="@id/btnDivide"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <!-- Button for clear -->
+    <Button
+        android:id="@+id/btnClear"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="C"
+        app:layout_constraintTop_toBottomOf="@id/btnMultiply"
+        app:layout_constraintStart_toEndOf="@id/btnMultiply"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
